--- a/composer.json
+++ b/composer.json
@@ -87,6 +87,9 @@
             "@auto-scripts"
         ],
         "app:migrate": "./bin/console --no-interaction doctrine:migrations:migrate",
+        "app:check": [
+            "./vendor/bin/phpcs"
+        ],
         "app:run": "php -S localhost:8000 ./public/index.php"
     },
     "conflict": {
@@ -101,6 +104,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "^3.7",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
         "symfony/debug-bundle": "6.1.*",
