--- a/composer.json
+++ b/composer.json
@@ -88,7 +88,8 @@
         ],
         "app:migrate": "./bin/console --no-interaction doctrine:migrations:migrate",
         "app:check": [
-            "./vendor/bin/phpcs"
+            "./vendor/bin/phpcs",
+            "./vendor/bin/phpstan analyse src"
         ],
         "app:run": "php -S localhost:8000 ./public/index.php"
     },
@@ -103,6 +104,7 @@
         }
     },
     "require-dev": {
+        "phpstan/phpstan": "^1.8",
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.7",
         "symfony/browser-kit": "6.1.*",
