Created method for get HistoricalData

--- a/.env
+++ b/.env
@@ -26,3 +26,7 @@ DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+YH_FINANCE_BASE_URI="https://example.com"
+YH_FINANCE_API_HOST="example.com"
+YH_FINANCE_API_KEY=
