--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,6 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.12",
         "phpdocumentor/reflection-docblock": "^5.3",
-        "phpspec/phpspec": "^7.2",
         "phpstan/phpdoc-parser": "^1.6",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/asset": "6.1.*",
@@ -105,6 +104,10 @@
         }
     },
     "require-dev": {
+        "friends-of-behat/mink-browserkit-driver": "^1.6",
+        "friends-of-behat/mink-extension": "^2.7",
+        "friends-of-behat/symfony-extension": "^2.3",
+        "phpspec/phpspec": "^7.2",
         "phpstan/phpstan": "^1.8",
         "squizlabs/php_codesniffer": "^3.7",
         "symfony/browser-kit": "6.1.*",
